# The MIT License (MIT)
#
# Copyright (c) 2024 Aliaksei Bialiauski
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
[package]
name = "ghiqc"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Command-line tool for checking quality of bug reports in GitHub Issues"
authors = ["Aliaksei Bialiauski <h1alexbelx@gmail.com>"]

[[bin]]
name = "ghiqc"
path = "src/main.rs"

[lints.rust]
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
question_mark_used = "deny"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
tracing-subscriber = "0.3.18"
log = { version = "0.4.21", features = [] }
env_logger = "0.11.3"
clap = { version = "4.5.7", optional = true, features = ["derive", "string"] }
clap_complete = { version = "4.5.1", optional = true }
clap_mangen = { version = "0.2.20", optional = true }
clap_complete_nushell = { version = "4.5.1", optional = true }
octocrab = "0.39.0"
hamcrest = "0.1.5"
tracing = "0.1.40"
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.4.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
testing_logger = "0.1.1"

[dev-dependencies]
assert_cmd = "2.0.14"
tempdir = "0.3.7"

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "clap_mangen", "clap_complete_nushell"]
